--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 
 <head>
   <link rel="stylesheet" type="text/css" href="style.css"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="robots" content="noindex, nofollow">
 </head>
 
 
