add background image and other styling

--- a/index.html
+++ b/index.html
@@ -10,31 +10,43 @@
 
 
 <body>
-  <h1>West Wind</h1>
 
-  <h2>Shortcuts</h2>
+  <header>
 
-  <ul class="shortcuts">
-    <li><a href="https://googledrive">Google Drive</a></li>
-    <li><a href="https://googlecalendar">Google Calendar</a></li>
-  </ul>
+    <h1>West Wind</h1>
 
-  <h2>Access Instructions</h2>
+  </header>
 
-  <h3>Create A Google Account</h3>
-  <p>
-    If you use Gmail, you already have a Google account.  Otherwise, you can 
-    <a href="https://accounts.google.com/signup">create a new account here.</a>
-    By default this will create a new gmail.com email address for you, but this is not a requirement.
-    There is an option to register with a pre-existing email address.
-  <p>
+  <main>
 
-  <h3>Request Access to Google Drive and Calendar</h3>
-  <p>
-    If the shortcuts above send you to an access denied error, email Peter and Zeke your
-    Google account name (email address).  Once your account has been granted  access, the
-    shortcuts above will take you to the Google Drive and Calendar.  
-  </p>
+    <h2>Shortcuts</h2>
+
+    <ul class="shortcuts">
+      <li><a href="https://googledrive">Google Drive</a></li>
+      <li><a href="https://googlecalendar">Google Calendar</a></li>
+    </ul>
+
+    <h2>Access Instructions</h2>
+
+    <h3>Create A Google Account</h3>
+    <p>
+      If you use Gmail, you already have a Google account.  Otherwise, you can 
+      <a href="https://accounts.google.com/signup">create a new account here.</a>
+      By default this will create a new gmail.com email address for you, but this is not a requirement.
+      There is an option to register with a pre-existing email address.
+    </p>
+
+    <h3>Request Access to Google Drive and Calendar</h3>
+    <p>
+      If the shortcuts above send you to an access denied error, email Peter and Zeke your
+      Google account name (email address).  Once your account has been granted  access, the
+      shortcuts above will take you to the Google Drive and Calendar.  
+    </p>
+
+  </main>
+
+  <footer>
+  </footer>
 
 </body>
 
