--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   
 
 <head>
-  <link rel="stylesheet" type="text/css" href="style.css"/>
+  <link rel="stylesheet" type="text/css" href="style.css?v201811140107"/>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="robots" content="noindex, nofollow">
 </head>
