add icons, button, and other styling changes

--- a/index.html
+++ b/index.html
@@ -13,34 +13,47 @@
 
   <header>
 
-    <h1>West Wind</h1>
+    <h1>West Wind Shortcuts</h1>
 
   </header>
 
   <main>
 
-    <h2>Shortcuts</h2>
+
 
     <ul class="shortcuts">
-      <li><a href="https://googledrive">Google Drive</a></li>
-      <li><a href="https://googlecalendar">Google Calendar</a></li>
+      <li>
+        <a href="https://googledrive">
+          <img src="media/google-drive-logo.png" class="shortcut-icon"/>
+          Google Drive
+        </a>
+      </li>
+      <li>
+        <a href="https://googlecalendar">
+          <img src="media/google-calendar-logo.png" class="shortcut-icon"/>
+          Google Calendar
+        </a>
+      </li>
     </ul>
 
     <h2>Access Instructions</h2>
 
-    <h3>Create A Google Account</h3>
     <p>
-      If you use Gmail, you already have a Google account.  Otherwise, you can 
-      <a href="https://accounts.google.com/signup">create a new account here.</a>
-      By default this will create a new gmail.com email address for you, but this is not a requirement.
-      There is an option to register with a pre-existing email address.
+      If you use Gmail, you already have a Google account.  Otherwise create one. 
+      By default Google will create a new gmail.com email address for you, but this is not a requirement.
+      You can choose to register with a pre-existing email address instead.
+    </p>
+    <p>
+      <a href="https://accounts.google.com/signup" target="blank" class="button">
+        Create a Google Account
+      </a>
     </p>
 
     <h3>Request Access to Google Drive and Calendar</h3>
     <p>
       If the shortcuts above send you to an access denied error, email Peter and Zeke your
       Google account name (email address).  Once your account has been granted  access, the
-      shortcuts above will take you to the Google Drive and Calendar.  
+      shortcuts above will take you to the West Wind Google Drive and Calendar.  
     </p>
 
   </main>
