--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   
 
 <head>
-  <link rel="stylesheet" type="text/css" href="style.css?v201811141937"/>
+  <link rel="stylesheet" type="text/css" href="style.css?v201811142032"/>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="robots" content="noindex, nofollow">
 </head>
@@ -36,12 +36,17 @@
       </li>
     </ul>
 
-    <h2>Access Instructions</h2>
+    <h2>Instructions</h2>
 
+    <h3>Google Account</h3>
     <p>
-      If you use Gmail, you already have a Google account.  Otherwise create one. 
-      By default Google will create a new gmail.com email address for you, but this is not a requirement.
-      You can choose to register with a pre-existing email address instead.
+      If you use Gmail, you already have a Google account.  Use the same credentials
+      you would for Gmail when prompted to sign in to Google Drive or Calendar.
+    </p>
+    <p>
+      If you don't use Gmail, you'll need to create a Google account. 
+      By default this will create a new gmail.com email address for you, but you can use 
+      your current email address instead if you like.
     </p>
     <p>
       <a href="https://accounts.google.com/signup" target="blank" class="button">
@@ -49,11 +54,14 @@
       </a>
     </p>
 
-    <h3>Request Access to Google Drive and Calendar</h3>
+    <h3>West Wind Google Drive and Calendar Access</h3>
     <p>
-      If the shortcuts above send you to an access denied error, email Peter and Zeke your
-      Google account name (email address).  Once your account has been granted  access, the
-      shortcuts above will take you to the West Wind Google Drive and Calendar.  
+      Once you have a Google account, it needs to be granted access to our shared
+      Google Drive and Calendar.  Many family members' accounts have already been
+      granted access.  Try the shortcuts above.  After signing in, if you see 
+      the West Wind Google Drive and Calendar then your account has access and you 
+      are all set.  If you see an access denied error, then send Peter, Reilly, and Zeke
+      your Google account email address so we can grant access.
     </p>
 
   </main>
