--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
 
     <ul class="shortcuts">
       <li>
-        <a href="https://googledrive">
+        <a href="https://drive.google.com/drive/folders/0B7FLZLhUIpocX25HVDFoTFZNSE0">
           <img src="media/google-drive-logo.png" class="shortcut-icon"/>
           Google Drive
         </a>
       </li>
       <li>
-        <a href="https://googlecalendar">
+        <a href="https://calendar.google.com/calendar/embed?src=k9clbtvojhp986s3v025co21ic%40group.calendar.google.com&ctz=America%2FNew_York">
           <img src="media/google-calendar-logo.png" class="shortcut-icon"/>
           Google Calendar
         </a>
